syntax = "proto3";

option go_package = "go.jclarke.tech/chord/keyvalue";

package keyvalue;

service KeyValue {
    rpc GetValue (KeyPair) returns (KeyPair) {}
    rpc SetValue (KeyPair) returns (KeyPair) {}
}

message KeyPair {
    string key = 1;
    string value = 2;
}
